# android

./: -files -u  .classpath  .codacy.yml  .codecov.yml  .drone.jsonnet  .drone.yml  .drone.yml.sig  .editorconfig  .gitattributes  .gitignore  .gitmodules  .lgtm  .project  .pullapprove.yml  .travis.yml  AGENTS.md  AndroidManifest.xml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FurtherSearch.txt  FurtherSearchExplaination.txt  Gemfile.lock.license  ICONS.txt  LICENSE.txt  MAINTAINERS  README.md  README.setup  REUSE.toml  Readme-AR.md  SECURITY.md  SETUP.md  THIRD_PARTY.txt  UPLOAD_ENHANCEMENTS.md  betaUpdateStatus  branches_old  build.gradle  build.gradle.kts  build.gradle.modified  build.xml  (+41 more)
.devcontainer/: Dockerfile  Dockerfile.license  README.md  devcontainer.env  devcontainer.env.license  devcontainer.json
.github/: .config.yml  .config.yml.license  FUNDING.yml  dependabot.yml  pull_request_template.md  pull_request_template.md.license  release.yml  stale.yml
.reuse/: dep5
.tx/: config  config.license
Park-Sq/: assetWizardSettings.xml  modules.xml  workspace.xml
androidTest/: AndroidManifest.xml
android_user_manual/: conf.py
apks/: latest.apk  nextcloud-beta-20160611.apk  nextcloud-beta-20160612.apk  (+5 more)
app/: .gitignore  (+5 more)
app/src/main/cpp/: CMakeLists.txt  cms_verifier.cpp
app/src/main/cpp/openssl_headers/openssl/: asn1.h  asn1t.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  core_names.h  crmf.h  crypto.h  ct.h  ess.h  fipskey.h  ocsp.h  opensslv.h  pkcs12.h  pkcs7.h  safestack.h  srp.h  ssl.h  ui.h  x509.h  x509_acert.h  x509_vfy.h  x509v3.h
(+7891 files in other folders)
